==> mxmxmx/eurotrash_mkII/soft/libraries/SerialFlash/SerialFlashChip.cpp <==
#include "SerialFlash.h"
#define SPICONFIG   SPISettings(50000000, MSBFIRST, SPI_MODE0)
#define digitalWriteFast(pin, state) digitalWrite((pin), (state))
#define FLAG_32BIT_ADDR		0x01	// larger than 16 MByte address
#define FLAG_STATUS_CMD70	0x02	// requires special busy flag check
#define FLAG_DIFF_SUSPEND	0x04	// uses 2 different suspend commands
#define FLAG_MULTI_DIE		0x08	// multiple die, don't read cross 32M barrier
#define FLAG_256K_BLOCKS	0x10	// has 256K erase blocks
#define FLAG_DIE_MASK		0xC0	// top 2 bits count during multi-die erase

void SerialFlashChip::read(uint32_t addr, void *buf, uint32_t len)
{
	uint8_t *p = (uint8_t *)buf;
	uint8_t b, f, status, cmd;

	memset(p, 0, len);
	f = flags;
	SPI.beginTransaction(SPICONFIG);
	b = busy;
	if (b) {
		// read status register ... chip may no longer be busy
		digitalWriteFast(cs_pin, LOW); //CSASSERT
		if (flags & FLAG_STATUS_CMD70) {
			SPI.transfer(0x70);
			status = SPI.transfer(0);
			if ((status & 0x80)) b = 0;
		} else {
			SPI.transfer(0x05);
			status = SPI.transfer(0);
			if (!(status & 1)) b = 0;
		}
		digitalWriteFast(cs_pin, HIGH); //CSRELEASE
		if (b == 0) {
			// chip is no longer busy :-)
			busy = 0;
		} else if (b < 3) {
			// TODO: this may not work on Spansion chips
			// which apparently have 2 different suspend
			// commands, for program vs erase
			digitalWriteFast(cs_pin, LOW); //CSASSERT
			SPI.transfer(0x06); // write enable (Micron req'd)
			digitalWriteFast(cs_pin, HIGH); //CSRELEASE
			delayMicroseconds(1);
			cmd = 0x75; //Suspend program/erase for almost all chips
			// but Spansion just has to be different for program suspend!
			if ((f & FLAG_DIFF_SUSPEND) && (b == 1)) cmd = 0x85;
			digitalWriteFast(cs_pin, LOW); //CSASSERT
			SPI.transfer(cmd); // Suspend command
			digitalWriteFast(cs_pin, HIGH); //CSRELEASE
			if (f & FLAG_STATUS_CMD70) {
				// Micron chips don't actually suspend until flags read
				digitalWriteFast(cs_pin, LOW); //CSASSERT
				SPI.transfer(0x70);
				do {
					status = SPI.transfer(0);
				} while (!(status & 0x80));
				digitalWriteFast(cs_pin, HIGH); //CSRELEASE
			} else {
				digitalWriteFast(cs_pin, LOW); //CSASSERT
				SPI.transfer(0x05);
				do {
					status = SPI.transfer(0);
				} while ((status & 0x01));
				digitalWriteFast(cs_pin, HIGH); //CSRELEASE
			}
		} else {
			// chip is busy with an operation that can not suspend
			SPI.endTransaction();	// is this a good idea?
			wait();			// should we wait without ending
			b = 0;			// the transaction??
			SPI.beginTransaction(SPICONFIG);
		}
	}
	do {
		uint32_t rdlen = len;
		if (f & FLAG_MULTI_DIE) {
			if ((addr & 0xFE000000) != ((addr + len - 1) & 0xFE000000)) {
				rdlen = 0x2000000 - (addr & 0x1FFFFFF);
			}
		}
		digitalWriteFast(cs_pin, LOW); //CSASSERT
		// TODO: FIFO optimize....
		if (f & FLAG_32BIT_ADDR) {
			SPI.transfer(0x03);
			SPI.transfer16(addr >> 16);
			SPI.transfer16(addr);
		} else {
			SPI.transfer16(0x0300 | ((addr >> 16) & 255));
			SPI.transfer16(addr);
		}
		SPI.transfer(p, rdlen);
		digitalWriteFast(cs_pin, HIGH); //CSRELEASE
		p += rdlen;
		addr += rdlen;
		len -= rdlen;
	} while (len > 0);
	if (b) {
		digitalWriteFast(cs_pin, LOW); //CSASSERT
		SPI.transfer(0x06); // write enable (Micron req'd)
		digitalWriteFast(cs_pin, HIGH); //CSRELEASE
		delayMicroseconds(1);
		cmd = 0x7A;
		if ((f & FLAG_DIFF_SUSPEND) && (b == 1)) cmd = 0x8A;
		digitalWriteFast(cs_pin, LOW); //CSASSERT
		SPI.transfer(cmd); // Resume program/erase
		digitalWriteFast(cs_pin, HIGH); //CSRELEASE
	}
	SPI.endTransaction();
}

void SerialFlashChip::eraseAll()
{
	if (busy) wait();
	uint8_t id[3];
	readID(id);
	//Serial.printf("ID: %02X %02X %02X\n", id[0], id[1], id[2]);
	if (id[0] == 0x20 && id[2] >= 0x20 && id[2] <= 0x22) {
		// Micron's multi-die chips require special die erase commands
		//  N25Q512A	20 BA 20  2 dies  32 Mbyte/die   65 nm transitors
		//  N25Q00AA	20 BA 21  4 dies  32 Mbyte/die   65 nm transitors
		//  MT25QL02GC	20 BA 22  2 dies  128 Mbyte/die  45 nm transitors
		uint8_t die_count = 2;
		if (id[2] == 0x21) die_count = 4;
		uint8_t die_index = flags >> 6;
		 //Serial.printf("Micron die erase %d\n", die_index);
		flags &= 0x3F;
		if (die_index >= die_count) return; // all dies erased :-)
		uint8_t die_size = 2;  // in 16 Mbyte units
		if (id[2] == 0x22) die_size = 8;
		SPI.beginTransaction(SPICONFIG);
		digitalWriteFast(cs_pin, LOW); //CSASSERT
		SPI.transfer(0x06); // write enable command
		digitalWriteFast(cs_pin, HIGH); //CSRELEASE
		 delayMicroseconds(1);
		digitalWriteFast(cs_pin, LOW); //CSASSERT
		// die erase command
		SPI.transfer(0xC4);
		SPI.transfer16((die_index * die_size) << 8);
		SPI.transfer16(0x0000);
		digitalWriteFast(cs_pin, HIGH); //CSRELEASE
		 //Serial.printf("Micron erase begin\n");
		flags |= (die_index + 1) << 6;
	} else {
		// All other chips support the bulk erase command
		SPI.beginTransaction(SPICONFIG);
		digitalWriteFast(cs_pin, LOW); //CSASSERT
		// write enable command
		SPI.transfer(0x06);
		digitalWriteFast(cs_pin, HIGH); //CSRELEASE
		 delayMicroseconds(1);
		digitalWriteFast(cs_pin, LOW); //CSASSERT
		// bulk erase command
		SPI.transfer(0xC7);
		digitalWriteFast(cs_pin, HIGH); //CSRELEASE
		SPI.endTransaction();
	}
	busy = 3;
}

void SerialFlashChip::eraseBlock(uint32_t addr)
{
	uint8_t f = flags;
	if (busy) wait();
	SPI.beginTransaction(SPICONFIG);
	digitalWriteFast(cs_pin, LOW); //CSASSERT
	SPI.transfer(0x06); // write enable command
	digitalWriteFast(cs_pin, HIGH); //CSRELEASE
	 delayMicroseconds(1);
	digitalWriteFast(cs_pin, LOW); //CSASSERT
	if (f & FLAG_32BIT_ADDR) {
		SPI.transfer(0xD8);
		SPI.transfer16(addr >> 16);
		SPI.transfer16(addr);
	} else {
		SPI.transfer16(0xD800 | ((addr >> 16) & 255));
		SPI.transfer16(addr);
	}
	digitalWriteFast(cs_pin, HIGH); //CSRELEASE
	SPI.endTransaction();
	busy = 2;
}

bool SerialFlashChip::begin(){
	return begin(6);
}

bool SerialFlashChip::begin(uint8_t _cs_pin)
{
	cs_pin = _cs_pin;
	uint8_t id[3];
	uint8_t f;
	uint32_t size;

	SPI.begin();
	pinMode(cs_pin, OUTPUT); //CSCONFIG
	digitalWriteFast(cs_pin, HIGH); //CSRELEASE
	readID(id);
	f = 0;
	size = capacity(id);
	if (size > 16777216) {
		// more than 16 Mbyte requires 32 bit addresses
		f |= FLAG_32BIT_ADDR;
		SPI.beginTransaction(SPICONFIG);
		if (id[0] == ID0_SPANSION) {
			// spansion uses MSB of bank register
			digitalWriteFast(cs_pin, LOW); //CSASSERT
			SPI.transfer16(0x1780); // bank register write
			digitalWriteFast(cs_pin, HIGH); //CSRELEASE
		} else {
			// micron & winbond & macronix use command
			digitalWriteFast(cs_pin, LOW); //CSASSERT
			SPI.transfer(0x06); // write enable
			digitalWriteFast(cs_pin, HIGH); //CSRELEASE
			delayMicroseconds(1);
			digitalWriteFast(cs_pin, LOW); //CSASSERT
			SPI.transfer(0xB7); // enter 4 byte addr mode
			digitalWriteFast(cs_pin, HIGH); //CSRELEASE
		}
		SPI.endTransaction();
		if (id[0] == ID0_MICRON) f |= FLAG_MULTI_DIE;
	}
	if (id[0] == ID0_SPANSION) {
		// Spansion has separate suspend commands
		f |= FLAG_DIFF_SUSPEND;
		if (size >= 67108864) {
			// Spansion chips >= 512 mbit use 256K sectors
			f |= FLAG_256K_BLOCKS;
		}
	}
	if (id[0] == ID0_MICRON) {
		// Micron requires busy checks with a different command
		f |= FLAG_STATUS_CMD70; // TODO: all or just multi-die chips?
	}
	flags = f;
	readID(id);
	return true;
}
